<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFrameLay"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_animation_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonStart"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:text="@string/button_start_game"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:theme="@style/FormButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonScore"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:text="@string/button_scoreboard"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:theme="@style/FormButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSettings"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:text="@string/button_settings"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:theme="@style/FormButton" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/game_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewHITS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/HITS"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>