<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/congratulations_background"
        android:backgroundTint="@color/black"
        android:backgroundTintMode="multiply"
        tools:context=".CongratulationsActivity">

        <TextView
            android:id="@+id/textViewCongratulationsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            android:textColor="@color/white"
            android:fontFamily="@font/aldrich"
            android:text="@string/congratulation_text"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCongratulations" />

        <TextView
            android:id="@+id/textViewLidia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="64dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/prasing_text"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewCongratulations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/aldrich"
            android:text="@string/congs"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEND"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/russian_humor"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textViewLidia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCongratulationsText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>