<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFrameLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_animation_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSave"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_marginRight="16dp"
                android:text="@string/button_save"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:theme="@style/FormButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonGoBack"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_marginLeft="16dp"
                android:text="@string/button_go_main_menu"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:theme="@style/FormButton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textViewCurrentScore3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="@string/music"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/currScoreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="777"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewPreviousScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/aldrich"
                android:text="Previous score was"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/prevScoreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aldrich"
                android:text="666"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>